ui_ux - fixed top navigation bar z-index issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,6 +93,7 @@
 */
 
 .dasboard-navbar {
+  z-index: 4;
   margin-bottom: 0;
   color: #fff;
   border: 0;
